<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerOrigem"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:visibility="visible"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView2" android:layout_marginEnd="8dp"
    />
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDestino" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/get_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonConverter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="get" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewResultado" android:visibility="visible"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonConverter" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@android:color/background_dark"
    />
    <TextView
            android:text="@string/value_to_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/spinnerOrigem"
            app:layout_constraintStart_toStartOf="@+id/spinnerOrigem" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerOrigem"/>
    <TextView
            android:text="@string/source_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/spinnerOrigem"
            app:layout_constraintEnd_toEndOf="@+id/spinnerOrigem"/>
    <TextView
            android:text="@string/destination_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/spinnerDestino"
            app:layout_constraintEnd_toEndOf="@+id/spinnerDestino"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@mipmap/ic_arrow_foreground"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/spinnerOrigem"
            app:layout_constraintEnd_toStartOf="@+id/spinnerDestino" android:layout_marginEnd="8dp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.527" android:contentDescription="@string/app_name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/textValue"
            app:layout_constraintStart_toStartOf="@+id/spinnerDestino"
            app:layout_constraintEnd_toEndOf="@+id/spinnerDestino" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDestino"
            android:importantForAutofill="no" android:contentDescription="@string/value_to_exchange"/>
</android.support.constraint.ConstraintLayout>